--- a/Gravity_Shooter/selecter.ui
+++ b/Gravity_Shooter/selecter.ui
@@ -52,7 +52,7 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="1">
-      <widget class="QSpinBox" name="planetSpinBox">
+      <widget class="QSpinBox" name="playerSpinBox">
        <property name="minimum">
         <number>2</number>
        </property>
