--- a/Gravity_Shooter/selecter.ui
+++ b/Gravity_Shooter/selecter.ui
@@ -58,7 +58,6 @@
        </property>
       </widget>
      </item>
-
      <item row="5" column="1">
       <widget class="QSpinBox" name="heightSpinBox">
        <property name="maximum">
@@ -83,7 +82,6 @@
       <widget class="QLabel" name="label_11">
        <property name="text">
         <string>Start Speed</string>
-
        </property>
       </widget>
      </item>
@@ -264,7 +262,6 @@
        </property>
        <property name="value">
         <number>5</number>
-
        </property>
       </widget>
      </item>
@@ -312,6 +309,13 @@
        </property>
        <property name="value">
         <double>0.500000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>MinDst</string>
        </property>
       </widget>
      </item>
