--- a/Gravity_Shooter/selecter.ui
+++ b/Gravity_Shooter/selecter.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>650</height>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>600</y>
+     <y>660</y>
      <width>191</width>
      <height>32</height>
     </rect>
@@ -35,7 +35,7 @@
      <x>50</x>
      <y>20</y>
      <width>411</width>
-     <height>571</height>
+     <height>631</height>
     </rect>
    </property>
    <property name="title">
@@ -47,19 +47,12 @@
       <x>10</x>
       <y>30</y>
       <width>391</width>
-      <height>511</height>
+      <height>581</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="13" column="1">
-      <widget class="QDoubleSpinBox" name="speedAtBeginningSpinBox">
-       <property name="value">
-        <double>1.100000000000000</double>
-       </property>
-      </widget>
-     </item>
      <item row="5" column="1">
-      <widget class="QSpinBox" name="heightSpinBox">
+      <widget class="QSpinBox" name="heightGeter">
        <property name="maximum">
         <number>8191</number>
        </property>
@@ -71,22 +64,15 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Width</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="0">
-      <widget class="QLabel" name="label_11">
-       <property name="text">
-        <string>Start Speed</string>
+     <item row="13" column="1">
+      <widget class="QDoubleSpinBox" name="speedAtBeginningGeter">
+       <property name="value">
+        <double>1.100000000000000</double>
        </property>
       </widget>
      </item>
      <item row="4" column="1">
-      <widget class="QSpinBox" name="widthSpinBox">
+      <widget class="QSpinBox" name="widthGeter">
        <property name="maximum">
         <number>8191</number>
        </property>
@@ -98,24 +84,17 @@
        </property>
       </widget>
      </item>
-     <item row="14" column="0">
-      <widget class="QLabel" name="label_15">
+     <item row="13" column="0">
+      <widget class="QLabel" name="label_11">
        <property name="text">
-        <string>BombDensity</string>
+        <string>Start Speed</string>
        </property>
       </widget>
      </item>
-     <item row="14" column="1">
-      <widget class="QDoubleSpinBox" name="bombDensitySpinBox">
-       <property name="value">
-        <double>0.220000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_6">
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>Height</string>
+        <string>Width</string>
        </property>
       </widget>
      </item>
@@ -126,6 +105,47 @@
        </property>
       </widget>
      </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>Height</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="0">
+      <widget class="QLabel" name="label_15">
+       <property name="text">
+        <string>Bomb Density</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="1">
+      <widget class="QDoubleSpinBox" name="bombDensityGeter">
+       <property name="value">
+        <double>0.220000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QDoubleSpinBox" name="maxRGeter">
+       <property name="maximum">
+        <double>8192.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>10.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <widget class="QDoubleSpinBox" name="epsGeter">
+       <property name="maximum">
+        <double>8192.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -133,15 +153,8 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string>Max Radius</string>
-       </property>
-      </widget>
-     </item>
      <item row="8" column="1">
-      <widget class="QDoubleSpinBox" name="minBetweenSpinBox">
+      <widget class="QDoubleSpinBox" name="minBetweenPercentGeter">
        <property name="maximum">
         <double>8192.000000000000000</double>
        </property>
@@ -153,33 +166,30 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
-      <widget class="QDoubleSpinBox" name="epsSpinBox">
-       <property name="maximum">
-        <double>8192.000000000000000</double>
-       </property>
-       <property name="value">
-        <double>1.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QDoubleSpinBox" name="minRadiusSpinBox">
-       <property name="maximum">
-        <double>8192.000000000000000</double>
-       </property>
-       <property name="value">
-        <double>4.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QDoubleSpinBox" name="maxRadiusSpinBox">
+     <item row="11" column="1">
+      <widget class="QDoubleSpinBox" name="shipRadiusGeter">
        <property name="maximum">
         <double>8192.000000000000000</double>
        </property>
        <property name="value">
         <double>10.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Max Radius</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QDoubleSpinBox" name="minRGeter">
+       <property name="maximum">
+        <double>8192.000000000000000</double>
+       </property>
+       <property name="value">
+        <double>4.000000000000000</double>
        </property>
       </widget>
      </item>
@@ -190,13 +200,6 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="0">
-      <widget class="QLabel" name="label_10">
-       <property name="text">
-        <string>EPS</string>
-       </property>
-      </widget>
-     </item>
      <item row="10" column="0">
       <widget class="QLabel" name="speed">
        <property name="text">
@@ -204,23 +207,20 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
-      <widget class="QDoubleSpinBox" name="shipRadiusSpinBox">
-       <property name="maximum">
-        <double>8192.000000000000000</double>
-       </property>
-       <property name="value">
-        <double>10.000000000000000</double>
-       </property>
-      </widget>
-     </item>
      <item row="10" column="1">
-      <widget class="QDoubleSpinBox" name="speedSpinBox">
+      <widget class="QDoubleSpinBox" name="speedGeter">
        <property name="maximum">
         <double>8192.000000000000000</double>
        </property>
        <property name="value">
         <double>2.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>EPS</string>
        </property>
       </widget>
      </item>
@@ -232,14 +232,14 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="label_21">
        <property name="text">
         <string>Min Planet Count</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QSpinBox" name="maxCntSpinBox">
+      <widget class="QSpinBox" name="maxPlanetCountGeter">
        <property name="maximum">
         <number>255</number>
        </property>
@@ -249,24 +249,21 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QSpinBox" name="playerSpinBox">
+      <widget class="QSpinBox" name="playerCountGeter">
        <property name="minimum">
         <number>2</number>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QSpinBox" name="minCntSpinBox">
-       <property name="maximum">
-        <number>255</number>
-       </property>
-       <property name="value">
-        <number>5</number>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Player Count</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QDoubleSpinBox" name="minDstSpinBox">
+      <widget class="QDoubleSpinBox" name="minDistanceGeter">
        <property name="maximum">
         <double>1000.000000000000000</double>
        </property>
@@ -278,17 +275,13 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Player Count</string>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="minPlanetCountGeter">
+       <property name="maximum">
+        <number>255</number>
        </property>
-      </widget>
-     </item>
-     <item row="12" column="0">
-      <widget class="QLabel" name="label_13">
-       <property name="text">
-        <string>Range</string>
+       <property name="value">
+        <number>5</number>
        </property>
       </widget>
      </item>
@@ -299,8 +292,36 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Min Distance</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1">
+      <widget class="QDoubleSpinBox" name="planetDensityGeter">
+       <property name="value">
+        <double>0.220000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="0">
+      <widget class="QLabel" name="label_16">
+       <property name="text">
+        <string>Planet Density</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>Range</string>
+       </property>
+      </widget>
+     </item>
      <item row="12" column="1">
-      <widget class="QDoubleSpinBox" name="rangeSpinBox">
+      <widget class="QDoubleSpinBox" name="rangeGeter">
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
@@ -312,10 +333,17 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_4">
+     <item row="16" column="0">
+      <widget class="QLabel" name="label_14">
        <property name="text">
-        <string>MinDst</string>
+        <string>Allow More Bombs</string>
+       </property>
+      </widget>
+     </item>
+     <item row="16" column="1">
+      <widget class="QSpinBox" name="allowMoreShootsWhenPVPGeter">
+       <property name="maximum">
+        <number>1</number>
        </property>
       </widget>
      </item>
